Removed deprecated URL methods in favor of URI